feat: fully functional CRUD server<->db with error handling

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "main": "server/server.js",
   "scripts": {
     "dev": "node --watch --env-file=.env server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server:start": "node --env-file=.env server/server.js",
+    "db:test": "node --env-file=.env test/test-db.js"
   },
   "dependencies": {
+    "mongodb": "^6.17.0",
     "socket.io": "^4.8.1"
   }
 }
