--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "db:test": "node --env-file=.env test/test-db.js"
   },
   "dependencies": {
-    "mongodb": "^6.17.0",
-    "socket.io": "^4.8.1"
+    "mongodb": "^6.17.0"
   }
 }
